<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menufondo2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewPersonaje"
        android:layout_width="215dp"
        android:layout_height="173dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="98dp"
        app:srcCompat="@drawable/elefante" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="204dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="134dp"
        android:background="@color/colorAccent"
        android:onClick="Jugar"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/jugar"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewBestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp" />
</RelativeLayout>